// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 1`] = `
<div tabindex="0" class="session-frame" name="component-fade" mode="out-in">
  <div class="session-outer-container"><i class="material-icons notranslate circle modal-icon">vpn_key</i>
    <div class="session">
      <div class="session-header"><a class=""><i class="material-icons notranslate circle back">arrow_back</i></a>
        <div class="session-close"><a><i class="material-icons notranslate circle back">close</i></a></div>
      </div>
      <h2 class="session-title">Use my Ledger Nano</h2>
      <div class="session-main">
        <div class="tm-hardware-state">
          <div class="tm-hardware-state-content">
            <!---->
            <div class="tm-hardware-state__label">
              <p>
                Please plug in your Ledger&nbsp;Nano and open the Cosmos Ledger
                app
              </p>
              <!----> <button class="button">
                Sign In
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 2`] = `
<div tabindex="0" class="session-frame" name="component-fade" mode="out-in">
  <div class="session-outer-container"><i class="material-icons notranslate circle modal-icon">vpn_key</i>
    <div class="session">
      <div class="session-header"><a class=""><i class="material-icons notranslate circle back">arrow_back</i></a>
        <div class="session-close"><a><i class="material-icons notranslate circle back">close</i></a></div>
      </div>
      <h2 class="session-title">Use my Ledger Nano</h2>
      <div class="session-main">
        <div class="tm-hardware-state">
          <div class="tm-hardware-state-content"><img src="~assets/images/loader.svg" alt="a small spinning circle to display loading" class="tm-hardware-state__icon">
            <div class="tm-hardware-state__label">
              <p>
                Please plug in your Ledger&nbsp;Nano and open the Cosmos Ledger
                app
              </p>
              <!----> <button class="button" disabled="disabled">
                Waiting for Ledger
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 3`] = `
<div tabindex="0" class="session-frame" name="component-fade" mode="out-in">
  <div class="session-outer-container"><i class="material-icons notranslate circle modal-icon">vpn_key</i>
    <div class="session">
      <div class="session-header"><a class=""><i class="material-icons notranslate circle back">arrow_back</i></a>
        <div class="session-close"><a><i class="material-icons notranslate circle back">close</i></a></div>
      </div>
      <h2 class="session-title">Use my Ledger Nano</h2>
      <div class="session-main">
        <div class="tm-hardware-state">
          <div class="tm-hardware-state-content"><img src="~assets/images/loader.svg" alt="a small spinning circle to display loading" class="tm-hardware-state__icon">
            <div class="tm-hardware-state__label">
              <!---->
              <!----> <button class="button" disabled="disabled">

              </button></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware shows the ledger conection view when there're errors 1`] = `
<div
  class="session-frame"
  mode="out-in"
  name="component-fade"
  tabindex="0"
>
  <div
    class="session-outer-container"
  >
    <i
      class="material-icons notranslate circle modal-icon"
    >
      vpn_key
    </i>
     
    <div
      class="session"
    >
      <div
        class="session-header"
      >
        <a
          class=""
        >
          <i
            class="material-icons notranslate circle back"
          >
            arrow_back
          </i>
        </a>
         
        <div
          class="session-close"
        >
          <a>
            <i
              class="material-icons notranslate circle back"
            >
              close
            </i>
          </a>
        </div>
      </div>
       
      <h2
        class="session-title"
      >
        Use my Ledger Nano
      </h2>
       
      <div
        class="session-main"
      >
        <div
          class="tm-hardware-state"
        >
          <div
            class="tm-hardware-state-content"
          >
            <!---->
             
            <div
              class="tm-hardware-state__label"
            >
              <p>
                
            Please plug in your Ledger Nano and open the Cosmos Ledger
            app
          
              </p>
               
              <p
                class="error-message"
              >
                
          No Ledger found
        
              </p>
               
              <button
                class="button"
              >
                
    Sign In
  
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware shows the ledger conection view with no errors 1`] = `
<div
  class="session-frame"
  mode="out-in"
  name="component-fade"
  tabindex="0"
>
  <div
    class="session-outer-container"
  >
    <i
      class="material-icons notranslate circle modal-icon"
    >
      vpn_key
    </i>
     
    <div
      class="session"
    >
      <div
        class="session-header"
      >
        <a
          class=""
        >
          <i
            class="material-icons notranslate circle back"
          >
            arrow_back
          </i>
        </a>
         
        <div
          class="session-close"
        >
          <a>
            <i
              class="material-icons notranslate circle back"
            >
              close
            </i>
          </a>
        </div>
      </div>
       
      <h2
        class="session-title"
      >
        Use my Ledger Nano
      </h2>
       
      <div
        class="session-main"
      >
        <div
          class="tm-hardware-state"
        >
          <div
            class="tm-hardware-state-content"
          >
            <!---->
             
            <div
              class="tm-hardware-state__label"
            >
              <p>
                
            Please plug in your Ledger Nano and open the Cosmos Ledger
            app
          
              </p>
               
              <!---->
               
              <button
                class="button"
              >
                
    Sign In
  
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware sign in does show the instructions to enable HID on Windows 1`] = `
<div tabindex="0" class="session-frame" name="component-fade" mode="out-in">
  <div class="session-outer-container"><i class="material-icons notranslate circle modal-icon">vpn_key</i>
    <div class="session">
      <div class="session-header"><a class=""><i class="material-icons notranslate circle back">arrow_back</i></a>
        <div class="session-close"><a><i class="material-icons notranslate circle back">close</i></a></div>
      </div>
      <h2 class="session-title">Use my Ledger Nano</h2>
      <div class="session-main">
        <div class="tm-hardware-state">
          <div class="tm-hardware-state-content">
            <!---->
            <div class="tm-hardware-state__label">
              Due to recent Ledger updates, using a Ledger on Windows now requires
              "Experimental Web Platform features" to be enabled.
              <!---->
              <!----> <button class="button">
                Sign In
              </button></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware sign in does show the instructions to fix connection issues for Linux users 1`] = `
<div tabindex="0" class="session-frame" name="component-fade" mode="out-in">
  <div class="session-outer-container"><i class="material-icons notranslate circle modal-icon">vpn_key</i>
    <div class="session">
      <div class="session-header"><a class=""><i class="material-icons notranslate circle back">arrow_back</i></a>
        <div class="session-close"><a><i class="material-icons notranslate circle back">close</i></a></div>
      </div>
      <h2 class="session-title">Use my Ledger Nano</h2>
      <div class="session-main">
        <div class="tm-hardware-state">
          <div class="tm-hardware-state-content">
            <!---->
            <div class="tm-hardware-state__label">
              Since we switched to WebUSB Linux users may experience connection
              issues with their devices.
              <br> <br>
              Please visit the following site to learn more about how to fix them:
              <div class="copy-feature-link">
                https://support.ledger.com/hc/en-us/articles/360019301813-Fix-USB-issues
                <i class="material-icons notranslate copied">
                  check
                </i></div> <br> <br>
              <!----> <button class="button">
                Sign In
              </button></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
